--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="200dp"
         android:background="@drawable/login_et"
+        android:textColorHint="@color/white"
         android:hint="Name"
         android:minHeight="48dp"
         android:paddingLeft="20dp"
@@ -37,6 +38,7 @@
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
         android:background="@drawable/login_et"
+        android:textColorHint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -51,6 +53,7 @@
         android:layout_marginTop="20dp"
         android:hint="Password"
         android:background="@drawable/login_et"
+        android:textColorHint="@color/white"
         android:minHeight="48dp"
         android:paddingLeft="20dp"
         android:paddingTop="10dp"
@@ -72,6 +75,7 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/login_et"
         android:hint="Confirm Password"
+        android:textColorHint="@color/white"
         android:inputType="textPassword"
         android:minHeight="48dp"
         android:paddingLeft="20dp"
@@ -90,7 +94,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/login_signup_button"
-        android:backgroundTint="@color/login_btn"
+        android:backgroundTint="#f9c406"
         android:text="@string/signup"
         android:textColor="@color/white"
         android:textSize="16sp"
