--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="200dp"
         android:background="@drawable/login_et"
+        android:textColorHint="@color/white"
         android:hint="Email"
         android:minHeight="48dp"
         android:paddingLeft="20dp"
@@ -29,6 +30,7 @@
     <EditText
         android:id="@+id/et_password"
         android:layout_width="0dp"
+        android:textColorHint="@color/white"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:background="@drawable/login_et"
@@ -50,7 +52,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="200dp"
         android:background="@drawable/login_signup_button"
-        android:backgroundTint="@color/login_btn"
         android:text="@string/login"
         android:textColor="@color/white"
         android:textSize="16sp"
@@ -68,6 +69,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="80dp"
         android:text="@string/forgetpass"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/btn_login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.865"
