add meal data class

--- a/app/src/main/res/layout/activity_category_data.xml
+++ b/app/src/main/res/layout/activity_category_data.xml
@@ -9,6 +9,7 @@
     tools:context=".Category.View.CategoryData">
 
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/nestedScrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginHorizontal="5dp"
@@ -45,8 +46,8 @@
                 android:layout_gravity="center"
                 android:gravity="center|center_vertical"
                 android:text="TextView"
-                android:textColor="#FFFFFF"
-                android:textSize="20sp" />
+                android:textColor="#A4FFFFFF"
+                android:textSize="12sp" />
 
             <TextView
                 android:id="@+id/textView5"
@@ -55,7 +56,7 @@
                 android:gravity="center"
                 android:text="@string/relatedMeals"
                 android:textColor="#F9C406"
-                android:textSize="24sp"
+                android:textSize="16sp"
                 android:textStyle="bold|italic" />
 
             <androidx.recyclerview.widget.RecyclerView
@@ -63,6 +64,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:listitem="@layout/category_item" />
+
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
