--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -44,8 +44,9 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="@string/Catigories"
-                android:textColor="#f9c406"
-                android:textSize="24sp" />
+                android:textColor="#FFFFFF"
+                android:textSize="24sp"
+                android:textStyle="bold" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_category"
