--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -44,7 +44,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="@string/Catigories"
-                android:textColor="#FFFFFF"
+                android:textColor="#F99417"
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
