--- a/app/src/main/res/layout/activity_ingrediant_search.xml
+++ b/app/src/main/res/layout/activity_ingrediant_search.xml
@@ -4,15 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center"
     android:background="#212121"
-    tools:context=".Category.View.CategoryData">
+    tools:context=".Search.Ingrediant.View.IngrediantSearch">
 
     <androidx.core.widget.NestedScrollView
-        android:id="@+id/nestedScrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginHorizontal="5dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginEnd="1dp"
         android:fillViewport="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,49 +23,29 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/iv_Ingridoant"
-                android:layout_width="match_parent"
+            <SearchView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:src="@tools:sample/avatars" />
+                android:layout_gravity="center|right"
+                android:layout_margin="10dp"
+                app:circularflow_radiusInDP="20dp" />
 
             <TextView
-                android:id="@+id/tv_ing_name"
+                android:id="@+id/textView2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="TextView"
+                android:text="@string/Ingrediant"
                 android:textColor="#F99417"
                 android:textSize="24sp"
-                android:textStyle="bold|italic" />
-
-            <TextView
-                android:id="@+id/tv_ing_disc"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center|center_vertical"
-                android:text="TextView"
-                android:textColor="#A4FFFFFF"
-                android:textSize="12sp" />
-
-            <TextView
-                android:id="@+id/textView5"
-                android:layout_width="match_parent"
-                android:layout_height="98dp"
-                android:gravity="center"
-                android:text="@string/relatedMeals"
-                android:textColor="#F99417"
-                android:textSize="16sp"
-                android:textStyle="bold|italic" />
+                android:textStyle="bold" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_meals"
+                android:id="@+id/rv_ingrediant"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:listitem="@layout/category_item" />
-
+                android:layout_margin="10dp"
+                tools:listitem="@layout/igrediant_search_iteam" />
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
