--- a/app/src/main/res/layout/activity_meal_data.xml
+++ b/app/src/main/res/layout/activity_meal_data.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#212121"
-    tools:context=".Meal.MealData">
+    tools:context=".Meal.View.MealData">
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nestedScrollView2"
