--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -8,17 +8,18 @@
 
     <!-- TODO: Update blank fragment layout -->
     <EditText
-        android:id="@+id/et_name"
+        android:id="@+id/et_name_signup"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginBottom="200dp"
         android:background="@drawable/login_et"
-        android:textColorHint="@color/white"
-        android:hint="Name"
+        android:hint="@string/name"
         android:minHeight="48dp"
-        android:paddingLeft="20dp"
+        android:paddingLeft="15dp"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -28,64 +29,67 @@
         app:layout_constraintWidth_percent=".8" />
 
     <EditText
-        android:id="@+id/et_email"
+        android:id="@+id/et_email_signin"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginTop="20dp"
+        android:background="@drawable/login_et"
         android:hint="Email"
         android:minHeight="48dp"
         android:paddingLeft="20dp"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
-        android:background="@drawable/login_et"
+        android:textColor="@color/white"
         android:textColorHint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_name"
+        app:layout_constraintTop_toBottomOf="@+id/et_name_signup"
         app:layout_constraintVertical_bias="0"
         app:layout_constraintWidth_percent=".8" />
+
     <EditText
-        android:id="@+id/et_password"
+        android:id="@+id/et_password_signin"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginTop="20dp"
-        android:hint="Password"
         android:background="@drawable/login_et"
-        android:textColorHint="@color/white"
+        android:hint="@string/pass"
+        android:inputType="textPassword"
         android:minHeight="48dp"
         android:paddingLeft="20dp"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_email"
+        app:layout_constraintTop_toBottomOf="@+id/et_email_signin"
         app:layout_constraintVertical_bias="0"
-        app:layout_constraintWidth_percent=".8"
-        android:inputType="textPassword"
-        />
+        app:layout_constraintWidth_percent=".8" />
 
     <EditText
         android:id="@+id/et_confirm_password"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/login_et"
-        android:hint="Confirm Password"
-        android:textColorHint="@color/white"
+        android:hint="@string/confirm_pass"
         android:inputType="textPassword"
         android:minHeight="48dp"
         android:paddingLeft="20dp"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/btn_signup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_password"
+        app:layout_constraintTop_toBottomOf="@+id/et_password_signin"
         app:layout_constraintVertical_bias="0"
         app:layout_constraintWidth_percent=".8" />
 
