--- a/app/src/main/res/layout/activity_meal_data.xml
+++ b/app/src/main/res/layout/activity_meal_data.xml
@@ -121,16 +121,6 @@
                 android:textColor="#A4FFFFFF"
                 android:textSize="12sp" />
 
-            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
-                android:id="@+id/pl_youtube_player"
-                android:layout_width="match_parent"
-
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginVertical="15dp">
-
-            </com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView>
-
             <TextView
                 android:id="@+id/tv_Ingridiant_str"
                 android:layout_width="match_parent"
@@ -145,7 +135,19 @@
                 android:id="@+id/rv_ingridiants"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:listitem="@layout/ingrediant_iteam" />
+                tools:listitem="@layout/ingrediant_iteam">
+
+            </androidx.recyclerview.widget.RecyclerView>
+
+            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
+                android:id="@+id/pl_youtube_player"
+                android:layout_width="match_parent"
+
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginVertical="15dp">
+
+            </com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView>
 
 
         </LinearLayout>
