--- a/app/src/main/res/layout/igrediant_search_iteam.xml
+++ b/app/src/main/res/layout/igrediant_search_iteam.xml
@@ -24,7 +24,7 @@
             android:padding="5dp">
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/cardView2"
+                android:id="@+id/cv_home_meal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -58,7 +58,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/cardView2" />
+                app:layout_constraintTop_toBottomOf="@+id/cv_home_meal" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
